@@ -1,5 +1,9 @@
 2008-08-28  Gerd Kohlberger  <gerdk@svn.gnome.org>
 
+	* src/mt-cursor-manager.h: Fix copy and paste error.
+
+2008-08-28  Gerd Kohlberger  <gerdk@svn.gnome.org>
+
 	* src/mt-main.c: Fix regression with drag clicks.
 
 2008-08-28  Gerd Kohlberger  <gerdk@svn.gnome.org>
